# LeapMotion-Telemanipulation

./: README.md
Example/Average/leap_panda_telemanipulation/src/: LeaptoPanda.cpp
Example/Quad_Leap/leap_panda_telemanipulation/config/: RvizLeap3.rviz  RvizLeap4.rviz
Example/Quad_Leap/leap_panda_telemanipulation/launch/: package_quad.launch
Example/Quad_Leap/leap_panda_telemanipulation/src/: LeaptoPanda.cpp
Example/Quad_Leap/vm_leap/client 3/launch/: node.launch
Example/Quad_Leap/vm_leap/client 4/launch/: node.launch
Launch Scripts/: build_disitation.sh  disitation_client.sh  disitation_host.sh  disitation_single.sh  ros_core.sh
leap_panda_telemanipulation/: CMakeLists.txt  package.xml
leap_panda_telemanipulation/config/: RvizLeap2.rviz
leap_panda_telemanipulation/launch/: package.launch  package_dual.launch
leap_panda_telemanipulation/msg/: Modified_leap.msg
leap_panda_telemanipulation/scripts/: LeapMoveGroup.py
leap_panda_telemanipulation/src/: LeaptoPanda.cpp
vm_leap/: CMakeLists.txt  package.xml
vm_leap/launch/: node.launch
vm_leap/msg/: Modified_leap.msg
vm_leap/src/: vmleap.cpp
ws/src/panda_moveit_config/: CMakeLists.txt  LeapMoveGroup.py  package.xml
ws/src/panda_moveit_config/launch/: demo.launch
ws/src/panda_moveit_config/src/: LeaptoPanda.cpp  pandaSubscriber.cpp
